# claude-google-chat

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  gitleaks.yml  publish.yml  release.yml
commands/: chat-listener.md  chat-send.md  chat-setup.md  connect.md  disconnect.md  send.md  setup.md
docs/: SETUP.md  SHELL_COMPLETION.md  architecture.md  configuration.md  installation.md  usage.md
hooks/: hooks.json
skills/google-chat/: SKILL.md
src/claude_google_chat/: __init__.py  __main__.py  auth.py  bootstrap.py  chat.py  cli.py  completion.py  config.py  doctor.py  errors.py  listener.py  messages.py  polling.py  probes.py  rawmessage.py  resilience.py  serve.py  sessionops.py  sessionrouter.py  sessions.py  setup.py  state.py  validation.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/templates/: config.toml.tftpl
tests/: conftest.py  fakes.py  test_auth.py  test_bootstrap.py  test_chat.py  test_cli.py  test_completion.py  test_completion_functional.py  test_config.py  test_config_unit.py  test_coverage_gaps.py  test_doctor.py  test_errors.py  test_format.py  test_listener.py  test_messages_unit.py  test_polling_resilience.py  test_probes.py  test_resilience.py  test_serve.py  test_sessionops.py  test_sessionrouter.py  test_sessions.py  test_setup.py  test_state.py  test_validation.py
tests/data/: config_missing_space.toml  config_valid.toml
tests/integration/: test_flows.py
tests/journeys/: test_user_journeys.py
