[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-google-chat"
version = "0.1.0"
description = "Two-way Google Chat ChatOps integration for Claude Code (plugin + CLI)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Matthew Dresden" }]
keywords = [
    "claude",
    "claude-code",
    "google-chat",
    "chatops",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
    "httplib2>=0.22",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/matthew-dresden/claude-google-chat"
Repository = "https://github.com/matthew-dresden/claude-google-chat"

[project.scripts]
cgc = "claude_google_chat.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_google_chat"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
packages = ["claude_google_chat"]
mypy_path = "src"

# Google client libraries ship without py.typed markers / stubs.
[[tool.mypy.overrides]]
module = [
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "httplib2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/claude_google_chat --cov-report=term-missing --cov-fail-under=90"
markers = [
    "real_oauth_indirection: opt out of the OAuth-login stub to test the real indirection",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest-cov>=7.1.0",
    "responses>=0.26.1",
]
